--- a/app/src/main/res/layout/registration_form.xml
+++ b/app/src/main/res/layout/registration_form.xml
@@ -9,10 +9,14 @@
         android:id="@+id/sign_in_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="24dp"
+        android:textColor="@color/design_default_color_primary"
         android:text="Sign in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textAllCaps="true"/>
 
     <TextView
         android:id="@+id/first_name_label"
@@ -22,16 +26,16 @@
         android:layout_marginLeft="5dp"
         android:text="First Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_in_title" />
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
 
     <EditText
         android:id="@+id/first_name_input"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/first_name_label"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/first_name_label"
-        app:layout_constraintTop_toTopOf="@+id/first_name_label" />
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
     <TextView
         android:id="@+id/last_name_label"
         android:layout_width="wrap_content"
@@ -43,12 +47,50 @@
         app:layout_constraintTop_toBottomOf="@+id/first_name_input" />
 
     <EditText
+        android:id="@+id/last_name_input"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/last_name_label"
         app:layout_constraintTop_toBottomOf="@+id/first_name_input" />
+    <TextView
+        android:id="@+id/email_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="5dp"
+        android:text="E-mail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/last_name_input" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/email_input"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="@+id/last_name_input"
+        app:layout_constraintStart_toStartOf="@+id/last_name_input"
+        app:layout_constraintTop_toBottomOf="@+id/last_name_input" />
+    <TextView
+        android:id="@+id/password_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="5dp"
+        android:text="Password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_input" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/password_input"
+        android:minHeight="48dp"
+        android:password="true"
+        app:layout_constraintEnd_toEndOf="@+id/last_name_input"
+        app:layout_constraintStart_toStartOf="@+id/last_name_input"
+        app:layout_constraintTop_toBottomOf="@+id/email_input" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/outlinedTextField"
@@ -96,4 +138,15 @@
         app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="44dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/sign_in_title"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
