--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,7 +33,6 @@
             android:layout_marginBottom="15dp"
             android:hint="@string/email_hint"
             app:endIconMode="clear_text"
-            app:helperText="Required*"
             app:helperTextEnabled="true"
             app:layout_constraintTop_toBottomOf="@+id/log_in_title">
 
@@ -50,7 +49,6 @@
             android:layout_margin="15dp"
             android:hint="@string/password_hint"
             app:endIconMode="password_toggle"
-            app:helperText="Required*"
             app:helperTextEnabled="true"
             app:layout_constraintTop_toBottomOf="@+id/email_field">
 
@@ -59,6 +57,16 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:id="@+id/forgot_password"
+            app:layout_constraintStart_toStartOf="@+id/password_field"
+            app:layout_constraintTop_toBottomOf="@+id/password_field"
+            android:text="@string/forgot_passwordq"
+            android:textSize="16sp"
+            android:focusable="true" />
 
         <Button
             android:id="@+id/login_button"
@@ -69,7 +77,7 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="@+id/password_field"
             app:layout_constraintStart_toStartOf="@+id/password_field"
-            app:layout_constraintTop_toBottomOf="@+id/password_field" />
+            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
