--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -17,17 +17,19 @@
             android:layout_marginTop="230dp"
             android:text="@string/app_name"
             android:textAllCaps="true"
-            android:textColor="@color/design_default_color_primary"
-            android:textSize="24sp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+            android:textColor="@color/purple_700"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/splash_screen_login"
+            style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:elevation="8dp"
             android:text="@string/login_button_text"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="@+id/splash_screen_appname"
@@ -36,14 +38,38 @@
 
         <Button
             android:id="@+id/splash_screen_signin"
+            style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/sign_in"
+            android:elevation="8dp"
+            android:text="@string/sign_up"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="@+id/splash_screen_login"
             app:layout_constraintStart_toStartOf="@+id/splash_screen_login"
             app:layout_constraintTop_toBottomOf="@+id/splash_screen_login" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/guest_text"
+            android:paddingTop="5dp"
+            app:layout_constraintEnd_toEndOf="@+id/splash_screen_signin"
+            app:layout_constraintStart_toStartOf="@+id/splash_screen_signin"
+            app:layout_constraintTop_toBottomOf="@+id/splash_screen_signin" />
+
+        <Button
+            android:id="@+id/guest_button"
+            style="@style/Widget.Material3.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/guest_button"
+            android:paddingTop="20dp"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/textView"
+            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintTop_toTopOf="@+id/textView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
