--- a/app/src/main/res/layout/fragment_guest_screen.xml
+++ b/app/src/main/res/layout/fragment_guest_screen.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -25,14 +25,13 @@
                 android:background="@android:color/transparent"
                 android:elevation="0dp"
                 app:navigationIcon="@drawable/ic_menu_24"
-                app:title="@string/guest_appbar_text">
-            </com.google.android.material.appbar.MaterialToolbar>
+                app:title="@string/guest_appbar_text"/>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <TextView
                 android:id="@+id/guest_screen_text"
@@ -66,9 +65,9 @@
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:menu="@menu/guest_navigation_drawer"
+        android:layout_gravity="start"
         app:headerLayout="@layout/guest_navigation_drawer_header"
-        android:layout_gravity="start"/>
+        app:menu="@menu/guest_navigation_drawer" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
