--- a/app/src/main/res/menu/user_navigation_drawer.xml
+++ b/app/src/main/res/menu/user_navigation_drawer.xml
@@ -2,8 +2,7 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <group >
-        <item android:title="@string/sign_up" />
-        <item android:title="@string/log_in" />
+        <item android:title="Log out" android:icon="@drawable/ic_sharp_logout_24" />
         <item android:title="Map" android:icon="@drawable/ic_map_24"/>
     </group>
 </menu>
