--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -44,6 +44,7 @@
             app:layout_constraintTop_toBottomOf="@+id/log_in_title">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email_field_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress" />
@@ -60,6 +61,7 @@
             app:layout_constraintTop_toBottomOf="@+id/email_field">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password_field_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
