Finally implemented login Added files: - Constants.kt (File with constants to use like BASE_URL for api) - Credentials.kt (object for user input, probably won't be needed) - LoginApi.kt (holds all api calls) - Repository.kt (holds all api calls methods) - RetrofitInstance.kt (singleton object of retrofit) Other changes: Moved files to different packages, helps with organization

--- a/app/src/main/res/layout-night/fragment_guest_screen.xml
+++ b/app/src/main/res/layout-night/fragment_guest_screen.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <data>
-        <variable
-            name="viewModel"
-            type="com.example.mobileclient.model.UserViewModel"
-            />
-    </data>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -22,7 +17,9 @@
             style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true">
+            android:background="@color/mustard"
+            android:fitsSystemWindows="true"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
@@ -32,7 +29,8 @@
                 android:background="@android:color/transparent"
                 android:elevation="0dp"
                 app:navigationIcon="@drawable/ic_menu_24"
-                app:title="@string/user_appbar_text"/>
+                app:title="@string/guest_appbar_text"
+                app:popupTheme="@style/AppTheme.popUpOverlay"/>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,12 +38,11 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
             <TextView
                 android:id="@+id/guest_screen_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.loginResponse.body().toString()}"
+                android:text="Info about this screen"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -74,9 +71,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/user_navigation_drawer_header"
-        app:menu="@menu/user_navigation_drawer" />
+        app:headerLayout="@layout/guest_navigation_drawer_header"
+        app:menu="@menu/guest_navigation_drawer" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
-</layout>
