--- a/app/src/main/res/layout-night/guest_navigation_drawer_header.xml
+++ b/app/src/main/res/layout-night/guest_navigation_drawer_header.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="true"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@color/green_light"
+        android:background="@color/mustard"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Placeholder"
             android:padding="5dp"
-            android:textColor="@color/white"
+            android:text="Username"
             android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Placeholder"
             android:paddingLeft="5dp"
             android:paddingTop="0dp"
             android:paddingBottom="10dp"
+            android:text="Placeholder"
             android:textAppearance="?attr/textAppearanceBody2"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/Title"
             app:layout_constraintTop_toBottomOf="@+id/Title" />
 
