--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
+<layout>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.mobileclient.model.UserViewModel"
+            />
+    </data>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".Login">
+    tools:context="fragments.Login">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -93,3 +99,4 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
 </LinearLayout>
+</layout>
