--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#190547</color>
-    <color name="purple_500">#4CAF50</color>
+    <color name="green_light">#4CAF50</color>
     <color name="purple_700">#190547</color>
-    <color name="teal_200">#39803B</color>
+    <color name="green_dark">#39803B</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
