--- a/app/src/main/res/menu/user_navigation_drawer.xml
+++ b/app/src/main/res/menu/user_navigation_drawer.xml
@@ -2,8 +2,8 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single" >
-        <item android:title="Tutorials" android:icon="@drawable/ic_twotone_school_24" android:checked="true"/>
-        <item android:title="User Details" android:icon="@drawable/ic_twotone_health_and_safety_24"/>
+        <item android:title="Tutorials" android:icon="@drawable/ic_twotone_school_24" android:id="@+id/nav_tutorials"/>
+        <item android:title="User Details" android:icon="@drawable/ic_twotone_health_and_safety_24" android:id="@+id/nav_user_details"/>
         <item android:title="Map" android:icon="@drawable/ic_map_24"/>
         <item android:title="Log out" android:icon="@drawable/ic_sharp_logout_24" />
     </group>
