--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -18,11 +18,21 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical">
 
+            <TextView
+                android:id="@+id/editAccount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit Account"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/editAccount"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_gravity="center"
@@ -43,23 +53,6 @@
                     android:contentDescription="User Avatar" />
             </androidx.cardview.widget.CardView>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/email_field"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:hint="@string/email_hint"
-                app:endIconMode="clear_text"
-                app:helperText="Required*"
-                app:helperTextEnabled="true"
-                app:layout_constraintTop_toBottomOf="@+id/card_view">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/email_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress" />
-            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/old_password_field"
@@ -70,7 +63,7 @@
                 app:endIconMode="password_toggle"
                 app:helperText="Required*"
                 app:helperTextEnabled="true"
-                app:layout_constraintTop_toBottomOf="@+id/email_field">
+                app:layout_constraintTop_toBottomOf="@id/card_view">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/old_password_input"
