Added registration support and error handling for problems with connection to server. Changes for that are in files: - Register.kt - Login.kt - UserViewModel.kt - BackendAPI.kt - Repository.kt - NewUser.kt (Data class for retrofit to send data)
Created splashscreens for day/night modes:
- splashscreen.png
- splashscreen_night.png

Created backgrounds (day/night) for some screens:
- mainscreen_background.png
- mainscreen_background_night.png

--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -76,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:hint="New_password"
+                android:hint="New password"
                 app:endIconMode="password_toggle"
                 app:helperText="Required*"
                 app:helperTextEnabled="true"
