--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/sign_in_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="15dp"
                 android:text="@string/sign_up"
                 android:textAllCaps="true"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
@@ -30,15 +30,18 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/first_name_field"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:hint="@string/first_name_hint"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="30"
                 app:endIconMode="clear_text"
-                app:helperText="Required*"
-                app:helperTextEnabled="true"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_title">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -50,15 +53,18 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/last_name_field"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:hint="@string/last_name_hint"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="30"
                 app:endIconMode="clear_text"
-                app:helperText="Required*"
-                app:helperTextEnabled="true"
                 app:layout_constraintTop_toBottomOf="@+id/first_name_field">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -69,15 +75,39 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/phonenumber_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:hint="@string/phonenumber_hint"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:endIconMode="clear_text"
+                app:layout_constraintTop_toBottomOf="@+id/last_name_field">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/phonenumber_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="phone" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/email_field"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:hint="@string/email_hint"
                 app:endIconMode="clear_text"
-                app:helperText="Required*"
-                app:helperTextEnabled="true"
-                app:layout_constraintTop_toBottomOf="@+id/last_name_field">
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/phonenumber_field">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_input"
@@ -93,8 +123,11 @@
                 android:layout_margin="15dp"
                 android:hint="@string/password_hint"
                 app:endIconMode="password_toggle"
-                app:helperText="Required*"
-                app:helperTextEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/email_field">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -111,8 +144,11 @@
                 android:layout_margin="15dp"
                 android:hint="@string/birthday_hint"
                 app:endIconMode="clear_text"
-                app:helperText="Required*"
-                app:helperTextEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/password_field">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -126,7 +162,7 @@
                 android:id="@+id/switchMaterial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="15dp"
                 android:checked="false"
                 android:text="@string/register_hint"
                 app:layout_constraintEnd_toEndOf="@+id/birthday_field"
