--- a/app/src/main/res/values-night-v26/themes.xml
+++ b/app/src/main/res/values-night-v26/themes.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.MobileClient" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#d69a23</item>
@@ -13,6 +14,6 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>\
         <!-- Customize your theme here. -->
-        <item name="android:windowSplashscreenContent">@drawable/splashscreen</item>
+        <item name="android:windowSplashscreenContent">@drawable/splashscreen_night</item>
     </style>
 </resources>
