Check in for paramedic

--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -64,8 +64,8 @@
             android:id="@+id/action_loggedInScreen_to_incident"
             app:destination="@id/incident" />
         <action
-            android:id="@+id/action_loggedInScreen_to_incidentsBrowse2"
-            app:destination="@id/incidentsBrowse2" />
+            android:id="@+id/action_loggedInScreen_to_incidentsBrowse"
+            app:destination="@id/incidentsBrowse" />
     </fragment>
     <fragment
         android:id="@+id/guestScreen"
@@ -109,18 +109,23 @@
             app:destination="@id/loggedInScreen" />
     </fragment>
     <fragment
-
         android:id="@+id/paramedicScreen"
         android:name="com.example.mobileclient.fragments.ParamedicScreen"
-        android:label="fragment_paramedic_screen" />
-        android:id="@+id/incidentsBrowse2"
+        android:label="fragment_paramedic_screen" >
+        <action
+            android:id="@+id/action_paramedicScreen_to_login"
+            app:destination="@id/login" />
+    </fragment>
+        <fragment
+            android:id="@+id/incidentsBrowse"
         android:name="com.example.mobileclient.fragments.IncidentsBrowse"
         android:label="fragment_incidents_browse"
         tools:layout="@layout/fragment_incidents_browse" >
         <action
             android:id="@+id/action_incidentsBrowse2_to_showIncident"
-            app:destination="@id/showIncident" />
-    </fragment>
+            app:destination="@id/showIncident" /></fragment>
+    
+
     <fragment
         android:id="@+id/showIncident"
         android:name="com.example.mobileclient.fragments.ShowIncident"
